# embd

./: .gitignore  .justfile  .pre-commit-hooks.yaml  Cargo.toml  LICENSE  README.md  action.yml  build.rs
.embd/: config.toml
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  clippy.yml  embd.yml  embd_check.yml  format.yml  machete.yml  release.yml  test_action.yml
docs/: design.md
infra/: README.md
infra/rust/just/: clippy.just  format.just  shells.just
src/: cache.rs  color.rs  config.rs  filesystem.rs  filter.rs  git.rs  lockfile.rs  main.rs  paths.rs
src/commands/: add.rs  common.rs  mod.rs  status.rs  update.rs
