[package]
name = "embd-cli"
version = "0.1.2"
edition = "2024"
description = "A CLI tool for embedding a git repo into another, an alternative to git subtree and git submodule."
license = "MIT"
repository = "https://github.com/ptsouchlos/embd"
readme = "README.md"

[[bin]]
name = "embd"
path = "src/main.rs"

[dependencies]
anstream = "1.0.0"
anyhow = "1"
clap = { version = "4.5.57", features = ["derive"] }
owo-colors = "4.3"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
tempfile = "3"
url = "2.5.8"
sha2 = "0.11"
base16ct = "1.0.0"
globset = "0.4.18"
shadow-rs = "2.0.0"

[build-dependencies]
shadow-rs = "2.0.0"

[dev-dependencies]
